unpackaged/main/default/objects/BarQR__Barcode_Config__c/BarQR__Barcode_Config__c.object-meta.xml
<CustomObject>
    <label>Barcode Config</label>
    <nameField>
        <label>Barcode Config Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Barcode Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>