unpackaged/main/default/objects/BarQR__Barcode_Config__c/fields/BarQR__Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>BarQR__Field_API_Name__c</fullName>
    <inlineHelpText>Please enter the API name of the field from which barcode needs to be generated</inlineHelpText>
    <label>Field API Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>