unpackaged/main/default/objects/BarQR__Barcode_Config__c/fields/BarQR__Image_Rotation__c.field-meta.xml
<CustomField>
    <fullName>BarQR__Image_Rotation__c</fullName>
    <description>Field to denote if redered barcode needs to be returned.</description>
    <inlineHelpText>Specify if barcode image needs to be returned</inlineHelpText>
    <label>Image Rotation</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BarQR__Barcode_Image_Rotations</valueSetName>
    </valueSet>
</CustomField>