unpackaged/main/default/objects/BarQR__Barcode_Config__c/fields/BarQR__Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>BarQR__Object_API_Name__c</fullName>
    <inlineHelpText>Please enter API name of the object from which barcode data is taken</inlineHelpText>
    <label>Object API Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>