unpackaged/main/default/objects/BarQR__Barcode_Config__c/fields/BarQR__Scale_X__c.field-meta.xml
<CustomField>
    <fullName>BarQR__Scale_X__c</fullName>
    <defaultValue>2</defaultValue>
    <description>Barcode Scale value X axis</description>
    <inlineHelpText>Barcode scale value on X axis</inlineHelpText>
    <label>Scale X</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>