unpackaged/main/default/objects/BarQR__Barcode_Config__c/fields/BarQR__Scale_Y__c.field-meta.xml
<CustomField>
    <fullName>BarQR__Scale_Y__c</fullName>
    <defaultValue>2</defaultValue>
    <description>Barcode Scale value Y axis</description>
    <inlineHelpText>Barcode scale value on Y axis</inlineHelpText>
    <label>Scale Y</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>