unpackaged/main/default/objects/BarQR__Barcode_Config__c/fields/BarQR__Show_Text_Also__c.field-meta.xml
<CustomField>
    <fullName>BarQR__Show_Text_Also__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Option to decide if barcode text also needs to be shown</description>
    <inlineHelpText>Checkbox to denote if the text also needs to be rendered next to barcode</inlineHelpText>
    <label>Show Text Also?</label>
    <type>Checkbox</type>
</CustomField>