unpackaged/main/default/objects/BarQR__Barcode_Config__c/validationRules/BarQR__Only_Allow_Alphanumeric_Names.validationRule-meta.xml
<ValidationRule>
    <fullName>BarQR__Only_Allow_Alphanumeric_Names</fullName>
    <active>true</active>
    <description>Only Alphanumeric characters are allowed in name field</description>
    <errorConditionFormula>NOT(REGEX( Name ,&quot;^[a-zA-Z0-9]*$&quot;))</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Please enter an alphanumeric and unique names without spaces.</errorMessage>
</ValidationRule>