unpackaged/main/default/objects/BarQR__Barcode_Config__c/listViews/BarQR__All.listView-meta.xml
<ListView>
    <fullName>BarQR__All</fullName>
    <columns>NAME</columns>
    <columns>BarQR__Object_API_Name__c</columns>
    <columns>BarQR__Field_API_Name__c</columns>
    <columns>BarQR__Barcode_Type__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>